<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/menu_search"
        android:title="@string/search"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_search_24"
        app:actionViewClass="android.widget.SearchView"
        />

    <group android:checkableBehavior="single">
        <item android:id="@+id/menu_sortBy"
            android:title="@string/sort_by1">
            <menu>
                <item android:title="@string/priority_high"
                    android:id="@+id/menu_priorityHigh"/>

                <item android:title="@string/priority_low"
                    android:id="@+id/menu_priorityLow"/>
            </menu>
        </item>
    </group>

    <item android:title="@string/delete_all"
        android:id="@+id/menu_deleteAll"/>


</menu>